--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@stdlib/process-env": "^0.0.7",
     "aws-sdk": "^2.1093.0",
     "class-transformer": "^0.5.1",
